# gennifer-bkb-grn

./: Dockerfile  README.md  app.py  app_tester.py  environment.yaml  gennifer_api.py  gennifer_api_template.py  gunicorn.config.py  pyproject.toml  requirements.txt  sample.json
bkb_grn/: __init__.py  discretize.py  gennifer_api.py  tasks.py  zenodo.py
