[tool.poetry]
name = "gennifer-algo-template"
version = "0.1.0"
description = "A template algo microservice to plug into the general GENNIFER API project."
authors = ["Chase Yakaboski <chase.th@dartmouth.edu>"]
readme = "README.md"
packages = [{include = "gennifer_algo_template"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.3"
Flask-RESTful = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
