[tool.poetry]
name = "bkb_grn"
version = "0.1.0"
description = "The BKB-GRN microservice to plug into the general GENNIFER API project."
authors = ["Chase Yakaboski <chase.th@dartmouth.edu>"]
readme = "README.md"
packages = [{include = "bkb_grn"}]

[tool.poetry.dependencies]
python = "~3.11"
Flask = "^2.2.3"
Flask-RESTful = "^0.3.9"
requests = "^2.31.0"
requests-cache = "^1.0.1"
gunicorn = "^20.1.0"
celery = "^5.2.7"
flask-wtf = "^1.1.1"
flower = "^1.2.0"
redis = "^4.5.5"
pybkb = { git = "https://github.com/di2ag/pybkb.git", branch = "master" }
sklearn-som = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
